<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mvmc</string>
    <string name="textview">Manage publicis-mode Virtual Machines !</string>
    <string name="hint">Mvmc, Eric Fehr, @publicis-modem, 2014</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="logout">Logout</string>
    <string name="title_activity_welcome">Welcome </string>
    <string name="exit">Exit</string>
    <string name="action_settings">Settings</string>
    <string name="vmlist">Vms</string>
    <string name="vmnew">New Vm</string>
    <string name="projectlist">Projects</string>
    <string name="userlist">Users</string>
    <string name="title_activity_vm">VmActivity</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_activity_new_vm">NewVmActivity</string>
    <string name="select_project">Please select a Project</string>
    <string name="select_flavor">Please select a Flavor</string>
    <string name="select_user">Please select an User</string>
    <string name="select_branch">Please select a Branch</string>
    <string name="select_commit">Please select a Commit</string>
    <string name="select_os">Please select an Os</string>
    <string name="start_vm">Start a New VM !</string>
    <string name="pref_endpoint_default">mvmc.publicis-modem.fr</string>
    <string name="pref_endpoint_summary">Please provide the endpoint of the rest api</string>
    <string name="pref_endpoint_title">Mvmc Endpoint</string>
    <string name="pref_username_default">usera@os.mvmc</string>
    <string name="pref_username_summary">Please provide the email</string>
    <string name="pref_username_title">Mvmc Email</string>
    <string name="pref_password_default">word123123</string>
    <string name="pref_password_summary">Please provide the password</string>
    <string name="pref_password_title">Mvmc Password</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
